2006-02-27 Mikhail Khodjaiants
	All serializable objects should have a stable serialVersionUID.
	* CDIException.java

2006-02-27 Mikhail Khodjaiants
	The DirectorySourceContainer's UI now supports the subfolders searching option (see bug 89748).
	Removed CDirectorySourceContainer and related classes. 
	The CDirectorySourceContainerType is kept for migration purposes.
	- CDirectorySourceContainer.java
	* CDebugTarget.java
	* CDirectorySourceContainerType.java
	* CSourceLookupDirector.java
	* SourceUtils.java
	* plugin.properties
	* plugin.xml

2006-02-24 Mikhail Khodjaiants
	Fix for bugs 129152 (Keyboard shortcuts are gone in CDT CVS HEAD) 
	and 128844 (No prompt for Debug perspective on suspend).
	* CDebugTarget.java

2006-02-20 Mikhail Khodjaiants
	Fire the resume event instead of the change event when a non-current thread is resumed.
	* CThread.java

2006-02-20 Mikhail Khodjaiants
	CModuleManager needs to extend PlatformObject to be accessible as an adapter 
	for IModuleRetrival.
	* CModuleManager.java

2006-02-08 Mikhail Khodjaiants
	Bug 126958: wrong state setting for thread in CThread.handleResumeEvent().
	* CThread.java

2006-01-30 Mikhail Khodjaiants
	Bug 125603: Debugger don't stop on breakpoints if src is linked.
	* CSourceLookupDirector.java

2006-01-29 Mikhail Khodjaiants
	Bug 118894: Allow stopping at other locations other than main().
	Applied patch from Ken Ryall (Nokia).
	* ICDTLaunchConfigurationConstants.java
	* CDebugTarget.java

2006-01-23 Mikhail Khodjaiants
	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.
	New "createSession" method accepts File instead of IBinaryObject.
	* ICDIDebugger.java
	+ ICDIDebugger2.java

2006-01-15 Mikhail Khodjaiants
	Bug 123745: Disassembly view can get into endless loop.
	* DisassemblyBlock.java

2006-01-04 Mikhail Khodjaiants
	Bug 118900: Display libraries loaded in post-mortem debug. 
	* CDebugTarget.java
	* CModuleManager.java

2005-12-30 Mikhail Khodjaiants
	Cleanup.