@@ -20,6 +20,7 @@ CDebuggerPage.name=C Debugger UI Page
 MemoryPreferencePage.name=Memory View
 CDebugPreferencePage.name=Debug
 SourcePreferencePage.name=Common Source Lookup Path
+DebuggerTypesPreferencePage.name=Debugger Types
 
 RunMenu.label=&Run
 DebugActionSet.label=C/C++ Debug
