@@ -24,3 +24,8 @@ CDebugPreferencePage.12=Maximum number of displayed instructions:
 CDebugPreferencePage.13=The valid value range is [{0},{1}].
 SourcePreferencePage.0=Common source lookup path settings.
 SourcePreferencePage.0=Common S&ource Lookup Path:
+DebuggerTypesPage.0=Select All
+DebuggerTypesPage.1=Deselect All
+DebuggerTypesPage.2=Default
+DebuggerTypesPage.3=default
+DebuggerTypesPage.4=Active debugger types:
